# nushell-posix

./: .gitattributes  .gitignore  AWK_CONVERTER.md  Cargo.toml  PROJECT_STATUS.adoc  README.adoc  pixi.toml
docs/: README.adoc  YASH_SYNTAX_ENABLED.adoc  YASH_SYNTAX_INTEGRATION.adoc  build_book.nu  build_guides.nu  developer-guide.adoc  nu-posix-book.adoc  nu-posix-book.html  operator-guide.adoc  problem_description.adoc  table-of-contents.adoc
docs/developer-guide/: api-reference.adoc  builtin-converters.adoc  command-registry.adoc  converter-architecture.adoc  converter-verification.adoc  development-guide.adoc  parser-integration.adoc  sus-converters.adoc  testing-framework.adoc
docs/operator-guide/: command-reference.adoc  troubleshooting.adoc
docs/output/: developer-guide.html  operator-guide.html
docs/output/developer-guide/: awk-converter.adoc  converter-verification.adoc
docs/output/operator-guide/: troubleshooting.adoc
docs/output/shared/: project-status.adoc
docs/shared/: architecture-overview.adoc  problem-description.adoc  project-status.adoc
examples/: ast-test.sh  awk_converter_demo.rs  sample.sh  yash_integration.rs
scripts/: ast-demo.nu
src/: lib.rs  main.rs
src/plugin/: converter.rs  core.rs  mod.rs  parser.rs  parser_heuristic.rs  parser_posix.rs
src/plugin/builtin/: cd.rs  exit.rs  false_builtin.rs  jobs.rs  kill.rs  mod.rs  pwd.rs  read.rs  test.rs  true_builtin.rs
src/plugin/sus/: awk.rs  basename.rs  cat.rs  cd.rs  chmod.rs  chown.rs  cp.rs  cut.rs  date.rs  dirname.rs  echo.rs  find.rs  grep.rs  head.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  ps.rs  realpath.rs  rm.rs  rmdir.rs  sed.rs  seq.rs  sort.rs  stat.rs  tail.rs  tee.rs  test.rs  uniq.rs  wc.rs  which.rs  whoami.rs
tests/: converter_verification.rs  integration_tests.rs  simple_converter_test.rs
