[package]
name = "nu-posix"
version = "0.1.0"
edition = "2021"
description = "A Nushell plugin to convert POSIX shell scripts to idiomatic Nushell syntax"
authors = ["Fredrick Eisele <fredrick.eisele@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/phreed/nu-posix"
keywords = ["shell", "posix", "nushell", "plugin", "converter"]
categories = ["command-line-utilities", "parsing"]

[dependencies]
nu-plugin = "0.105"
nu-protocol = "0.105"
yash-syntax = "0.15"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"

[lib]
name = "nu_posix"
path = "src/lib.rs"

[[bin]]
name = "nu_plugin_posix"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
